2000-06-28  John Harper  <john@dcs.warwick.ac.uk>

	* nokogiri-wm.jl, nokogiri-widget.jl, nokogiri-widget-test.jl,
	nokogiri-widget-dialog.jl, nokogiri-user-level.jl,
	nokogiri-slot.jl, nokogiri-shell.jl, nokogiri-main.jl.in,
	nokogiri-layout.jl, nokogiri-i18n.jl, nokogiri-group.jl,
	nokogiri-dialog.jl, nokogiri-config.jl,
	nokogiri-color-preview.jl, nokogiri-apply.jl,

	nokogiri-layouts/keymaps.jl,

	nokogiri-widgets/program.jl, nokogiri-widgets/pair.jl,
	nokogiri-widgets/match-window.jl, nokogiri-widgets/list.jl,
	nokogiri-widgets/keymap.jl, nokogiri-widgets/frame-style.jl,
	nokogiri-widgets/font.jl, nokogiri-widgets/file.jl,
	nokogiri-widgets/color.jl, nokogiri-widgets/alist.jl: 

	First check-in to main repository of new `nokogiri' config
	interface