@@ -56,3 +56,7 @@ exec rep "$0" "$@"
 
   (setq interrupt-mode 'exit)
   (run-shell socket-id))
+
+;; Local variables:
+;; major-mode: lisp-mode
+;; End:
