@@ -1,3 +1,3 @@
 
-This will be the new configuration user interface for sawfish.
+This is the new configuration user interface for sawfish.
 
