@@ -10,6 +10,7 @@ These are the currently implemented widget types:
 	(color)
 	(font)
 	(file)
+	(program)			;currently the same as `file'
 
 	(optional WIDGET)
 	(or WIDGETS...)
