@@ -1,0 +1,2 @@
+#!/bin/sh
+exec rep ./nokogiri-main.jl.in $*
